--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Lista de cursos da Alura</title>
 </head>
+
 <body>
     <h2>Cursos de DevOps</h2>
-    
+
     <dl>
         <dt>Vagrant</dt>
         <dd>Gerenciando máquinas virtuais</dd>
@@ -19,9 +21,19 @@
 
         <dt>Integração Contínua</dt>
         <dd>Maturidade e Produtividade no desenvolvimento de software</dd>
-        
+
         <dt>Kubernetes</dt>
         <dd>Introdução a orquestração de containers</dd>
     </dl>
+
+    <h2>Cursos de Cloud:</h2>
+    <dl>
+        <dt>Amazon EC2</dt>
+        <dd>Faça um deploy da sua webapp com alta disponibilidade e escalabilidade.</dd>
+
+        <dt>Amazon S3</dt>
+        <dd>Manipule e armazene objetos na nuvem</dd>
+    </dl>
 </body>
+
 </html>
