--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Lista de cursos da Alura</title>
 </head>
+
 <body>
     <h2>Cursos de DevOps</h2>
-    
     <dl>
         <dt>Vagrant</dt>
         <dd>Gerenciando máquinas virtuais</dd>
@@ -19,9 +20,19 @@
 
         <dt>Integração Contínua</dt>
         <dd>Maturidade e Produtividade no desenvolvimento de software</dd>
-        
+
         <dt>Kubernetes</dt>
         <dd>Introdução a orquestração de containers</dd>
     </dl>
+
+    <h2>Cursos de Linux:</h2>
+    <dl>
+        <dt>Linux I</dt>
+        <dd>Conhecendo e utilizando o terminal</dd>
+
+        <dt>Linux II</dt>
+        <dd>Programas, processos e pacotes</dd>
+    </dl>
 </body>
+
 </html>
