--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Lista de cursos da Alura</title>
+    <title>Lista de cursos</title>
 </head>
+
 <body>
     <h2>Cursos de DevOps</h2>
-    
+
     <dl>
         <dt>Vagrant</dt>
         <dd>Gerenciando máquinas virtuais</dd>
@@ -19,9 +21,10 @@
 
         <dt>Integração Contínua</dt>
         <dd>Maturidade e Produtividade no desenvolvimento de software</dd>
-        
+
         <dt>Kubernetes</dt>
         <dd>Introdução a orquestração de containers</dd>
     </dl>
 </body>
+
 </html>
