Add curso de certificacao linux

--- a/index.html
+++ b/index.html
@@ -39,10 +39,13 @@
 
         <dt>Shell Script II</dt>
         <dd>Fazendo monitoramento, agendando tarefas e backup</dd>
+
+        <dt>Certificação Linux</dt>
+        <dd>Descrição do Curso de Certificação Linux</dd>
     </dl>
 
     <h2>Cursos de Cloud:</h2>
-    
+
     <dl>
         <dt>Amazon EC2</dt>
         <dd>Faça um deploy da sua webapp com alta disponibilidade e escalabilidade.</dd>
